--- a/index.html
+++ b/index.html
@@ -58,30 +58,24 @@
             <li>
               <a href="#">
                 <div id="comment" class="col-lg-3">
-                  <img src="images/icon-comment.png" alt="" />
-                  <!--
-                    -->
-                  <span>Read Comments</span>
+                  <img src="images/icon-comment.png" alt="" /><!--
+                    --><span>Read Comments</span>
                 </div>
               </a>
             </li>
             <li>
               <a href="#">
                 <div id="upload" class="col-lg-3">
-                  <img src="images/icon-upload.png" alt="" />
-                  <!--
-                    -->
-                  <span>Read Later</span>
+                  <img src="images/icon-upload.png" alt="" /><!--
+                    --><span>Read Later</span>
                 </div>
               </a>
             </li>
             <li>
               <a href="#">
                 <div id="share" class="col-lg-3">
-                  <img src="images/icon-share.png" alt="" />
-                  <!--
-                    -->
-                  <span>Share this Post</span>
+                  <img src="images/icon-share.png" alt="" /><!--
+                    --><span>Share this Post</span>
                 </div>
               </a>
             </li>
